# OpenApi/openapi.json
@@ -430,29 +430,6 @@
         }
       }
     },
-    "/api/v1/products": {
-      "get": {
-        "tags": [
-          "Products"
-        ],
-        "operationId": "Products_Get",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Product"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/v1/token/refresh": {
       "post": {
         "tags": [
@@ -478,29 +455,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/AuthResponseDto"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/weatherforecasts": {
-      "get": {
-        "tags": [
-          "WeatherForecasts"
-        ],
-        "operationId": "WeatherForecasts_Get",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/WeatherForecast"
-                  }
                 }
               }
             }
@@ -1344,36 +1298,6 @@
           5
         ]
       },
-      "Product": {
-        "type": "object",
-        "additionalProperties": false,
-        "required": [
-          "name",
-          "supplier"
-        ],
-        "properties": {
-          "id": {
-            "type": "string",
-            "format": "guid"
-          },
-          "name": {
-            "type": "string",
-            "minLength": 1
-          },
-          "supplier": {
-            "type": "string",
-            "minLength": 1
-          },
-          "price": {
-            "type": "number",
-            "format": "double",
-            "minimum": 1.0
-          },
-          "imageUrl": {
-            "type": "string"
-          }
-        }
-      },
       "RefreshTokenDto": {
         "type": "object",
         "additionalProperties": false,
@@ -1383,36 +1307,6 @@
           },
           "refreshToken": {
             "type": "string"
-          }
-        }
-      },
-      "WeatherForecast": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "date": {
-            "type": "string",
-            "format": "date"
-          },
-          "time": {
-            "type": "string",
-            "format": "time"
-          },
-          "temperatureC": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "summary": {
-            "type": "string",
-            "nullable": true
-          },
-          "temperatureF": {
-            "type": "integer",
-            "format": "int32"
           }
         }
       }
